fixed search button alignment

--- a/style.css
+++ b/style.css
@@ -478,7 +478,7 @@ p {
     position: absolute;
     display: flex;
     justify-content: center;
-    left: 35%;
+    left: 30%;
     top: 4.7rem;
   }
 
